--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "@firebase/firestore": "^3.7.3",
     "@fontsource/roboto": "^4.5.8",
     "@mui/material": "^5.10.15",
+    "@react-query-firebase/firestore": "^1.0.0-dev.7",
+    "@types/react-datepicker": "^4.8.0",
+    "add-to-calendar-button": "^1.18.8",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.2",
     "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
