--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.2",
-    "react-router-dom": "^6.4.3"
+    "react-router-dom": "^6.4.3",
+    "vite-plugin-pwa": "^0.14.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
